<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LogInActivity">

    <FrameLayout
        android:id="@+id/bg_video_container"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></FrameLayout>

    <FrameLayout
        android:id="@+id/floating_video_container"
        android:layout_width="108dp"
        android:layout_height="192dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/audio_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="20"
            android:scaleType="centerInside"
            android:src="@drawable/btn_unmute" />

        <ImageView
            android:id="@+id/switch_camera"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="20"
            android:src="@drawable/btn_switch_camera" />

        <ImageView
            android:id="@+id/leave_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:scaleType="centerInside"
            android:src="@drawable/btn_endcall" />

        <ImageView
            android:id="@+id/video_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="20"
            android:scaleType="centerInside"
            android:src="@drawable/video_toggle_btn" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>