...
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="120dp" />

            <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/search_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="50dp"
                android:scrollbars="vertical"
                tools:context=".fragments.SearchFragment" />
...
