<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_chat_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/purple_700"
    tools:context=".activities.ChatActivity">

    <View
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/content_top_icon"
        app:layout_constraintBottom_toTopOf="@id/layout_send"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/chat_info"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:tint="@color/purple_700" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_supporter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/launch_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:padding="20dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@id/view_background"
        app:layout_constraintTop_toBottomOf="@id/view_supporter"
        app:stackFromEnd="true" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="@id/view_background"
        app:layout_constraintEnd_toEndOf="@+id/view_background"
        app:layout_constraintStart_toStartOf="@+id/view_background"
        app:layout_constraintTop_toTopOf="@id/view_background" />

    <FrameLayout
        android:id="@+id/layout_share"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/background_chat_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:padding="8dp"
            android:src="@drawable/add_icon"
            app:tint="@color/white" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/layout_send"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/background_chat_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/send_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:padding="8dp"
            android:src="@drawable/send_icon"
            app:tint="@color/white" />
    </FrameLayout>


    <EditText
        android:id="@+id/input_message"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_chat_input"
        android:hint="@string/type_message"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/layout_send"
        app:layout_constraintEnd_toStartOf="@+id/layout_send"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/layout_share"
        app:layout_constraintTop_toTopOf="@+id/layout_send"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/launch_button"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_weight="20"
        android:scaleType="centerInside"
        android:src="@drawable/video_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>